--- a/web/style/addBook.css
+++ b/web/style/addBook.css
@@ -1,3 +1,8 @@
 #addBookTable td{
-    border: none !important;
+    border: none;
+}
+
+#mainWrap {
+    margin-left: 10px;
+    margin-top: 10px;
 }
